@@ -44,6 +44,9 @@ extern char point_string[];
 #if HAVE_LOCALECONV
 struct lconv *
 localeconv (void)
+#if defined __cplusplus && defined __GLIBC__
+  throw()
+#endif
 {
   static struct lconv  l;
   l.decimal_point = point_string;
@@ -54,6 +57,9 @@ localeconv (void)
 #if HAVE_NL_LANGINFO
 char *
 nl_langinfo (nl_item n)
+#if defined __cplusplus && defined __GLIBC__
+  throw()
+#endif
 {
   return point_string;
 }
